//$Id$

CCK 6.2-dev
===========

Be sure to visit update.php after uploading this release.

- #119102 Combo field prep, add group_type column to content_group table.
- #310420 Make sure fields created by disabled modules get marked inactive in the database.
- #119102 Combo field prep, allow way to override multiple values settings for optionwidgets.
- #119102 Combo field prep, add prev_parent and group info to display fields overview.
- #119102 Combo field prep, add a helper function that can determine if a field is in use and the max delta value in use.
- #309667 Add Panels integration in. This is still experimental since Panels for D6 is still experimental.
- #307909 Don't create Views tables for fields that don't create db columns.
- Make incompatibility with older Views releases stand out more.
- Fix errors when rendering fieldgroups in 'advanced' contexts (RSS, search...).
- Do not insert field and group labels in search index.
- Fix drag-n-drop order lost when node form is redisplayed after node preview or failed validation.
- Fix drag-n-drop order not accounted for in node previews.
- #306572 Number: Incorrect validation of allowed values for Float and Decimal fields.
- #306963 by p.brouwers - Number : fix missing formatter for '9.999,99' (be_2).
- Views integration : Add default label for userref and noderef relationships.
- #234774 Nifty new UI to add fields and groups (requires a cache clear) + initial integration with advanced_help module.
- #281749 by asimmonds: fix '0' not parsed as an alias for allowed values.
- #309365 Views integration: Consider relationships when force-adding the 'Node: Type' field - thks jhuckabee.
- #308215 by Reg - Nodereference: Do not filter on empty string when querying for referenceable nodes.
- #308778 Fix $item['view'] element missing for tokens and contemplate.
- #310414 Fix broken redirects when adding fields to content types with an underscore in their machine names.