@@ -5,6 +5,8 @@ CCK 6.2-dev
 
 Be sure to visit update.php after uploading this release.
 
+- #119102 Combo field prep, add hooks to the fieldgroup module so other modules can alter group info.
+- #119102 Combo field prep, add group_type information to the Manage fields screen.
 - #119102 Combo field prep, add group_type column to content_group table.
 - #310420 Make sure fields created by disabled modules get marked inactive in the database.
 - #119102 Combo field prep, allow way to override multiple values settings for optionwidgets.
